--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,21 @@
 
 .task-done{
     text-decoration: line-through;
-    background-color: rgba(20, 220, 30, 0.8);
+    background-color: rgba(182, 255, 191, 0.8);
     border-radius: 10px;
 }
 
 .task-undone{
     background-color: lightgray;
     border-radius: 10px;
+}
+
+.red-color{
+    color: red;
+}
+
+.green-color{
+    color: rgba(20, 220, 30, 0.8);
 }
 
 ul{
